[+] add new user stories

--- a/DrTestXML/DrTestXML/UserStories.html
+++ b/DrTestXML/DrTestXML/UserStories.html
@@ -123,7 +123,7 @@
         }
 
         .auto-style3 {
-            height: 39px;
+            height: 28px;
         }
     </style>
 </head>
@@ -175,11 +175,43 @@
             <td>Например, есть исходное описанные тестов. Должна быть возможность восстановить эту иерархию только на основании результатов присланных тестов. Например, через parent id</td>
             <td>Proposed</td>
         </tr>
-
-        <tr class="storyPassed">
-            <td>Story</td>
-            <td>description</td>
-            <td>Passed</td>
+        <tr class="storyProposed">
+            <td>6. Обеспечить однозначную идентификацию исходного теста и всю его историю. Для чего, вводится понятие <b>TestID</b> - <b>TID</b>.</td>
+            <td>TestID это уникальный идентификатор каждого теста в виде GUID, группы тестов, который <b>присвается ему при создании автором теста и никогда не меняется</b>, включая клонирование теста. Таким образом всегда можно посмотреть историю выполнения данного теста на различных билдах, на различных системах и прочее. Необходимо понимать, что TestID не уникален в рамках SessionID и может встречать много раз за один запуск группы тестов.</td>
+            <td>Proposed</td>
+        </tr>
+        <tr class="storyProposed">
+            <td>7. Требуется обеспечить связь всех тестов в рамках запуска всего комплекса тестов, - сессии. Для чего, вводится понятие <b>SessionID</b> - <b>SID</b>.</td>
+            <td>Все тесты в рамках одного старта, сессии, <b>имеют одинаковый SessionID</b> который выставляется test launcher'ом, который отвечает за начальную компиляцию, агрегацию и запуск тестов.</td>
+            <td>Proposed</td>
+        </tr>
+        <tr class="storyProposed">
+            <td>8. Необходимо предусмотреть формат данных, передающий информацию о сессии, например, номер билда, комментарий к запуску, и прочее.</td>
+            <td>Для обеспечения связи между тестами, набором тестов, и свойст сессии требуется использовать <b>SessionID</b>.</td>
+            <td>Proposed</td>
+        </tr>
+        <tr class="storyProposed">
+            <td>9. Требуется различать один и тот же тест запущенный в одной сессии дважды, например, на разных тестовых рабочих станциях, для чего вводится понятие <b>ExecutionID - EIT</b>.</td>
+            <td><b>ExecutionID выставляет непосредственно в момент запуска скомпилированного теста</b>. Делает это конечный launcher. Пример взаимосвязи описанных выше идентификаторов: один запуск одного теста на разных рабочих системах, приведет к одинаковым SeesionID и TestID, но разным ExecutionID.</td>
+            <td>Proposed</td>
+        </tr>
+        <tr class="storyProposed">
+            <td class="auto-style3">10. Необходимо отличать во времени старые и новые данные одного и того же теста, для чего вводится <b>ChangeID - CID</b></td>
+            <td class="auto-style3">Каждый тест имеет <b>ChangeID изначально равный 0 и инкрементирующийся на единицу при любых изменениях теста при его запуске</b>. Увеличение ChangeID вносится при сохранении любых изменений в тесте или группы тестов непосредственно тем компонентом который производит сохранение состояния теста.</td>
+            <td class="auto-style3">Proposed</td>
+        </tr>
+        <tr class="storyProposed">
+            <td colspan="3">11. Система хранения и отображения статситики запуска тестов должна предуматривать асинхронную работу с потоком тестов:</td>
+        </tr>
+        <tr class="storyProposed">
+            <td>11a. Тесты могут приходить от разных сессий.</td>
+            <td>Каждый тест имеет отличительный <b>SessionID</b>, на основании которого можно отличить один запуск группы тестов от другого.</td>
+            <td>Proposed</td>
+        </tr>
+        <tr class="storyProposed">
+            <td>11b. Статус одного теста может приходить не в хронологической последовательности.</td>
+            <td>Каждый запуск теста можно четко определить на основании уникальности <b>ExecutionID</b>, поэтому тест находится по этому идентификатору и обновляется только с меньшего на больший идентификатор изменения - <b>ChangeID</b>.</td>
+            <td>Proposed</td>
         </tr>
         <tr class="storySkipped">
             <td>Story</td>
@@ -187,9 +219,9 @@
             <td>Skipped</td>
         </tr>
         <tr class="storyProposed">
-            <td>Story</td>
-            <td>description</td>
-            <td>Proposed</td>
+            <td class="auto-style2">Story</td>
+            <td class="auto-style2">description</td>
+            <td class="auto-style2">Proposed</td>
         </tr>
         <tr class="storyFailed">
             <td>Story</td>
