[*] remove stupid auto-style

--- a/DrTestXML/DrTestXML/UserStories.html
+++ b/DrTestXML/DrTestXML/UserStories.html
@@ -118,13 +118,6 @@
             BACKGROUND-COLOR: #f4f4f4;
         }
 
-        .auto-style2 {
-            height: 16px;
-        }
-
-        .auto-style3 {
-            height: 28px;
-        }
     </style>
 </head>
 
@@ -219,9 +212,9 @@
             <td>Skipped</td>
         </tr>
         <tr class="storyProposed">
-            <td class="auto-style2">Story</td>
-            <td class="auto-style2">description</td>
-            <td class="auto-style2">Proposed</td>
+            <td>Story</td>
+            <td>description</td>
+            <td>Proposed</td>
         </tr>
         <tr class="storyFailed">
             <td>Story</td>
